# brainsight

./: pyproject.toml
brainsight/dashboard/pages/: home.py  secret.py
brainsight/data_receiving/: data_handling_src.py
scripts/: start_dashboard.py  stream_data.py
tests/: test_brainsight.py
