[tool.poetry]
name = "brainsight"
version = "0.1.0"
description = ""
authors = ["Olof Harrysson <harrysson.olof@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
python-osc = "^1.8.0"
dash-labs = "^1.0.2"
dash-bootstrap-components = "^1.0.3"
dash-extensions = "^0.0.69"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
